# plataforma-ganadera-multitenant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN_ARQUITECTURA_AMELIA.md  PLAN_DE_TRABAJO.md  README.md  TESTING.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
Backend/: .env.example  package-lock.json  package.json
Backend/prisma/: schema.prisma  schema.prisma.bak
Backend/src/: app.controller.ts  app.module.ts  main.ts
Backend/src/alertas/: alertas.controller.ts  (+2 more)
Frontend/: README.md  pubspec.yaml
Frontend/lib/: main.dart
Frontend/linux/: CMakeLists.txt
Frontend/test/: widget_test.dart
Frontend/web/: index.html
__MACOSX/: ._farmlink_app
__MACOSX/farmlink_app/: ._README.md
fases/: README.md  fase-00-saneamiento-repositorio.md  fase-01-seguridad-autenticacion.md  fase-02-base-datos-entidades.md  fase-03-api-crud-completa.md  fase-04-arquitectura-multitenant.md  fase-05-frontend-state-management.md  fase-06-validacion-dtos.md  fase-07-testing.md  fase-08-devops-docker.md  fase-09-documentacion-api.md  fase-10-integracion-frontend-backend.md
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.jsx
prisma/: schema.prisma
src/: app.module.ts  main.py  main.ts
src/app/: __init__.py  config.py  dependencies.py
src/config/: app.config.ts  env.config.ts  index.ts  jwt.config.ts  swagger.config.ts  typeorm.config.ts
src/db/: seeders
src/prisma/: prisma.service.ts
src/tests/: test_auth.py  test_herd.py  test_users.py
(+182 files in other folders)
