[tool.poetry]
name = "sistema-ganadero-backend"
version = "0.1.0"
description = "Backend para la gestión de un sistema ganadero"
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
alembic = "^1.7.0"
pydantic = "^1.8.2"
passlib = "^1.7.4"
python-dotenv = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"